testing/syntax-error/python/syntax-error1.py
# Raspberry Pi Foundation
# Developed as part of Ada Computer Science
# 
# Usage licensed under CC BY-NC-SA 4.0


def main():
    # Demonstrates a syntax error
    user_name = input("Please enter your name: "
    print(user_name)


# This code will run if this file is executed directly
# (i.e. not called by another program)
if __name__ == "__main__":
    main()
